fix(grid/grid): prevent collapsing margins

--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -11,7 +11,7 @@
   flex-flow: row wrap;
   justify-content: space-around;
   align-content: space-around;
-  max-width: 1600px;
+  max-width: 100em;
   margin: 0 auto;
 }
 
@@ -31,6 +31,8 @@
 }
 
 .grid-item {
+  flex: 1;
+  display: inline-block;
   margin: 0;
   width: 100%;
   height: 100%;
